# ATS-Multi-Agent-Ops-Assistant

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  eval.yml
data/docs/: accelerator_docs.json
data/eval_reports/: eval_20260705_114320.json
data/test_cases/: eval_suite.json
scripts/: run_evaluation.py  start_api.py  start_ui.py
src/: __init__.py  config.py
src/agents/: __init__.py
src/api/: __init__.py  main.py
src/evaluation/: __init__.py  evaluator.py  reports.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/llm/: __init__.py  nvidia_client.py
src/mcp_servers/: __init__.py  mcp_server_diagnostics.py  mcp_server_docs.py  mcp_server_escalation.py
src/safety/: __init__.py  audit_logger.py  faithfulness.py  guardrails.py
src/ui/: __init__.py  app.py
tests/: conftest.py  test_evaluation.py  test_mcp_servers.py  test_nvidia.py  test_safety.py
